Color contrast issues

--- a/src/css/01-primary.css
+++ b/src/css/01-primary.css
@@ -457,7 +457,7 @@ h2 {
 }
 
 h3 {
-	color: #8d959a;
+	color: #2a3033;
 	font-size: 30px;
 	line-height: 44px;
 	letter-spacing: -.6px;
@@ -486,7 +486,7 @@ p a.button + h4 {
 }
 
 h4 {
-	color: #8d959a;
+	color: #2a3033;
 	font-size: 23px;
 	line-height: 35px;
 	letter-spacing: -.4px;
@@ -496,7 +496,7 @@ h4 {
 }
 
 h5 {
-	color: #8d959a;
+	color: #2a3033;
 	font-size: 19px;
 	line-height: 29px;
 	letter-spacing: -.4px;
@@ -512,7 +512,7 @@ section.h5-list h5 {
 }
 
 h6 {
-	color: #464e54;
+	color: #2a3033;
 	font-size: 14px;
 	line-height: 22px;
 	text-transform: uppercase;
@@ -558,7 +558,7 @@ blockquote p {
 	padding: 0;
 	margin-top: -14px;
 	margin-bottom: -28px;
-	color: #8d959a;
+	color: #2a3033;
 	font-size: 23px;
 	line-height: 40px;
 	letter-spacing: .3px;
@@ -679,7 +679,7 @@ main .page .stats.button-wrap section {
 .big-number {
 	font-family: Palatino, "Palatino Linotype", "Palatino LT STD", serif;
 	font-style: italic;
-	color: #f6861f;
+	color: #3f6b72;
 	font-size: 60px;
 	line-height: 1em;
 	vertical-align: middle;
@@ -745,7 +745,7 @@ main .page section.next-steps h3 {
 	font-size: 30px;
 	letter-spacing: 5.6px;
 	text-transform: uppercase;
-	color: #cbc4a2;
+	color: #2a3033;
 }
 
 main .next-steps a.button,
@@ -945,7 +945,7 @@ body.wsu-palette-palette4 .dropcap:first-child:first-letter {
 .white h1,
 .white h3,
 .white h5 {
-	color: #8d959a;
+	color: #2a3033;
 }
 
 .white h2 {
